# cpp-binary-tooling

./: meson.build
include/: bread.hpp  elf.hpp
src/: bread.cpp  elf.cpp  main.cpp
